added latest nuget.exe to be downloaded

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,8 +8,7 @@ install:
    - ps: (New-Object System.Net.WebClient).DownloadFile($urlCurrent, $tempFileCurrent)
    - ps: Add-Type -AssemblyName System.IO.Compression.FileSystem; [System.IO.Compression.ZipFile]::ExtractToDirectory($tempFileCurrent, $env:DOTNET_INSTALL_DIR)
    - ps: $env:Path = "$env:DOTNET_INSTALL_DIR;$env:Path"
-nuget:
-  account_feed: true
+   - appveyor DownloadFile https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
 init:
 - cmd: dotnet --info
 build_script:
