--- a/src/IdentityServer/appsettings.json
+++ b/src/IdentityServer/appsettings.json
@@ -84,6 +84,16 @@
       "FrontChannelLogoutUris": [ "http://localhost:5002/index.html" ],
       "PostLogoutRedirectUris": [ "http://localhost:5002" ],
       "AllowedCorsOrigins": [ "http://localhost:5002" ]
+    },
+    {
+      "ClientId": "ro.client",
+      "ClientName": "ResourceOwnerPasswordClient",
+
+      "AllowedGrantTypes": [ "resourceownerpassword" ],
+      "AllowedScopes": [ "openid", "profile", "api1" ],
+
+      // 511536EF-F270-4058-80CA-1C89C192F69A
+      "ClientSecrets": [ { "Value": "fU7fRb+g6YdlniuSqviOLWNkda1M/MuPtH6zNI9inF8=" } ]
     }
   ]
 }
