set up ResourceOwnerPassword Flow successfully.

--- a/src/IdentityServer/appsettings.json
+++ b/src/IdentityServer/appsettings.json
@@ -51,7 +51,7 @@
       // 511536EF-F270-4058-80CA-1C89C192F69A
       "ClientSecrets": [ { "Value": "fU7fRb+g6YdlniuSqviOLWNkda1M/MuPtH6zNI9inF8=" } ],
       "AllowedGrantTypes": [ "client_credentials" ],
-      "AllowedScopes": [ "api1" ]
+      "AllowedScopes": [ "openid", "profile", "api1" ]
     },
     {
       "ClientId": "mvc",
@@ -89,7 +89,7 @@
       "ClientId": "ro.client",
       "ClientName": "ResourceOwnerPasswordClient",
 
-      "AllowedGrantTypes": [ "resourceownerpassword" ],
+      "AllowedGrantTypes": [ "password" ],
       "AllowedScopes": [ "openid", "profile", "api1" ],
 
       // 511536EF-F270-4058-80CA-1C89C192F69A
