--- a/src/Models/Models.csproj
+++ b/src/Models/Models.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.5.1" />
+  </ItemGroup>
+
 </Project>
