--- a/src/BootStrapper/BootStrapper.csproj
+++ b/src/BootStrapper/BootStrapper.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
+    <ProjectReference Include="..\PermissionServer.Client\PermissionServer.Client.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
