--- a/src/ConsoleTestApp/ConsoleTestApp.csproj
+++ b/src/ConsoleTestApp/ConsoleTestApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,6 +8,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BootStrapper\BootStrapper.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\PermissionServer.Client\PermissionServer.Client.csproj" />
   </ItemGroup>
 
 </Project>
