--- a/src/Interfaces/Interfaces.csproj
+++ b/src/Interfaces/Interfaces.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.5.1" />
+  </ItemGroup>
 
 </Project>
