--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityModel" Version="3.10.9" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.5.1" />
   </ItemGroup>
 
   <ItemGroup>
