--- a/src/PermissionServer.Models/PermissionServer.Models.csproj
+++ b/src/PermissionServer.Models/PermissionServer.Models.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.5.1" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
