--- a/src/PermissionServer/PermissionServer.csproj
+++ b/src/PermissionServer/PermissionServer.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BootStrapper\BootStrapper.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\PermissionServer.Core\PermissionServer.Core.csproj" />
   </ItemGroup>
