--- a/src/ConsoleTestApp/ConsoleTestApp.csproj
+++ b/src/ConsoleTestApp/ConsoleTestApp.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Version>0.5.0</Version>
+    <Authors>efilnukefesin</Authors>
+    <Company>efilnukefesin.NET</Company>
   </PropertyGroup>
 
   <ItemGroup>
