--- a/src/IdentityServer/IdentityServer.csproj
+++ b/src/IdentityServer/IdentityServer.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Version>0.5.0</Version>
+    <Authors>efilnukefesin</Authors>
+    <Company>efilnukefesin.NET</Company>
   </PropertyGroup>
 
   <ItemGroup>
