--- a/src/PermissionServer.Client/PermissionServer.Client.csproj
+++ b/src/PermissionServer.Client/PermissionServer.Client.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.3.0</Version>
+    <Authors>efilnukefesin</Authors>
+    <Company>efilnukefesin.NET</Company>
   </PropertyGroup>
 
   <ItemGroup>
