--- a/src/SuperHotFeatureServer/SuperHotFeatureServer.csproj
+++ b/src/SuperHotFeatureServer/SuperHotFeatureServer.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Version>0.0.1</Version>
+    <Authors>efilnukefesin</Authors>
+    <Company>efilnukefesin.NET</Company>
   </PropertyGroup>
 
   <ItemGroup>
