--- a/src/BootStrapper/BootStrapper.csproj
+++ b/src/BootStrapper/BootStrapper.csproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.1.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.DependencyInjection" Version="1.1.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.5.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Logger.SerilogLogger" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
