--- a/src/PermissionServer.Client/PermissionServer.Client.csproj
+++ b/src/PermissionServer.Client/PermissionServer.Client.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="IdentityModel" Version="3.10.9" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.5.1" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.1.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.5.1" />
   </ItemGroup>
 
