--- a/src/PermissionServer.Core/PermissionServer.Core.csproj
+++ b/src/PermissionServer.Core/PermissionServer.Core.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.1.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.5.1" />
   </ItemGroup>
 
