--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.1.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.5.1" />
   </ItemGroup>
 
