--- a/src/SuperHotFeatureServer/SuperHotFeatureServer.csproj
+++ b/src/SuperHotFeatureServer/SuperHotFeatureServer.csproj
@@ -18,4 +18,9 @@
     <ProjectReference Include="..\BootStrapper\BootStrapper.csproj" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
 </Project>
