--- a/src/PermissionServer/PermissionServer.csproj
+++ b/src/PermissionServer/PermissionServer.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BootStrapper\BootStrapper.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\PermissionServer.Client\PermissionServer.Client.csproj" />
     <ProjectReference Include="..\PermissionServer.Core\PermissionServer.Core.csproj" />
   </ItemGroup>
 
