--- a/src/PermissionServer.Client/PermissionServer.Client.csproj
+++ b/src/PermissionServer.Client/PermissionServer.Client.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityModel" Version="3.10.10" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.2.0" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.5.1" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.1.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.5.1" />
