sneaked in own level in controller - you never know what for ;-)

--- a/src/PermissionServer/PermissionServer.csproj
+++ b/src/PermissionServer/PermissionServer.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\PermissionServer.Client\PermissionServer.Client.csproj" />
     <ProjectReference Include="..\PermissionServer.Core\PermissionServer.Core.csproj" />
+    <ProjectReference Include="..\PermissionServer.Server\PermissionServer.Server.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
