--- a/src/SuperHotFeatureServer.SDK/SuperHotFeatureServer.SDK.csproj
+++ b/src/SuperHotFeatureServer.SDK/SuperHotFeatureServer.SDK.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\PermissionServer.Client\PermissionServer.Client.csproj" />
   </ItemGroup>
 
