--- a/src/SuperHotFeatureServer/SuperHotFeatureServer.csproj
+++ b/src/SuperHotFeatureServer/SuperHotFeatureServer.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BootStrapper\BootStrapper.csproj" />
+    <ProjectReference Include="..\PermissionServer.SDK\PermissionServer.SDK.csproj" />
     <ProjectReference Include="..\PermissionServer.Server\PermissionServer.Server.csproj" />
   </ItemGroup>
 
