implemented Method for all controllers: get permissions which can be applied for the current user

--- a/src/PermissionServer.Server/PermissionServer.Server.csproj
+++ b/src/PermissionServer.Server/PermissionServer.Server.csproj
@@ -9,7 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BootStrapper\BootStrapper.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\PermissionServer.Core\PermissionServer.Core.csproj" />
     <ProjectReference Include="..\PermissionServer.Models\PermissionServer.Models.csproj" />
   </ItemGroup>
 
