--- a/src/PermissionServer.SDK/PermissionServer.SDK.csproj
+++ b/src/PermissionServer.SDK/PermissionServer.SDK.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\PermissionServer.Client\PermissionServer.Client.csproj" />
+    <ProjectReference Include="..\PermissionServer.Core\PermissionServer.Core.csproj" />
   </ItemGroup>
 
 </Project>
