--- a/test/ServicesTests/ServicesTests.csproj
+++ b/test/ServicesTests/ServicesTests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\BootStrapper\BootStrapper.csproj" />
     <ProjectReference Include="..\..\src\Services\Services.csproj" />
   </ItemGroup>
 
