--- a/src/BootStrapper/BootStrapper.csproj
+++ b/src/BootStrapper/BootStrapper.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.1.0" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="0.5.0" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.RestDataService" Version="0.5.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.DependencyInjection" Version="1.3.0" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.5.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.6.1" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Logger.SerilogLogger" Version="1.1.0" />
   </ItemGroup>
 
