--- a/src/PermissionServer.SDK/PermissionServer.SDK.csproj
+++ b/src/PermissionServer.SDK/PermissionServer.SDK.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="0.5.0" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.6.1" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="0.6.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.6.5" />
   </ItemGroup>
 
   <ItemGroup>
