--- a/src/AdminApp/AdminApp.csproj
+++ b/src/AdminApp/AdminApp.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.1.1" />
     <PackageReference Include="NET.efilnukefesin.Extensions.Wpf.Commands" Version="1.0.2" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.0.2" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
   </ItemGroup>
 
