--- a/src/BootStrapper/BootStrapper.csproj
+++ b/src/BootStrapper/BootStrapper.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="NET.efilnukefesin.Implementations.DependencyInjection" Version="1.3.1" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.6.7" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Logger.SerilogLogger" Version="1.1.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
