added missing package

--- a/src/BootStrapper/BootStrapper.csproj
+++ b/src/BootStrapper/BootStrapper.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.1.1" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="0.6.2" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.EndpointRegister" Version="0.8.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.RestDataService" Version="0.7.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.DependencyInjection" Version="1.3.2" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.7.0" />
