--- a/src/BootStrapper/BootStrapper.csproj
+++ b/src/BootStrapper/BootStrapper.csproj
@@ -11,11 +11,12 @@
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.1.1" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="0.6.2" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.EndpointRegister" Version="0.8.0" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.FileDataService" Version="1.0.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.RestDataService" Version="0.7.0" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.DependencyInjection" Version="1.3.2" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.7.0" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.DependencyInjection" Version="1.3.3" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.7.1" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Logger.SerilogLogger" Version="1.1.1" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.0.2" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
