--- a/src/PermissionServer.Core/PermissionServer.Core.csproj
+++ b/src/PermissionServer.Core/PermissionServer.Core.csproj
@@ -9,7 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.1.1" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.7.0" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.7.1" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="0.6.2" />
   </ItemGroup>
 
   <ItemGroup>
