--- a/src/SuperHotFeatureServer/SuperHotFeatureServer.csproj
+++ b/src/SuperHotFeatureServer/SuperHotFeatureServer.csproj
@@ -26,4 +26,6 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+
 </Project>
