file storage is working now - got an array in array issue, next up though

--- a/src/PermissionServer/Properties/launchSettings.json
+++ b/src/PermissionServer/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "PermissionServer": {
       "commandName": "Project",
       "launchBrowser": false,
-      "launchUrl": "api/permissions",
+      "launchUrl": "swagger/",
       "applicationUrl": "https://localhost:6009;http://localhost:6008",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
