working on normal authentication without user values

--- a/src/PermissionServer/PermissionServer.csproj
+++ b/src/PermissionServer/PermissionServer.csproj
@@ -25,6 +25,17 @@
     <ProjectReference Include="..\PermissionServer.Server\PermissionServer.Server.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Data\roles.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="Data\users.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
