login flow in client app is working

--- a/src/ClientApp/ClientApp.csproj
+++ b/src/ClientApp/ClientApp.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <None Remove="Views\LoginView.xaml" />
+    <None Remove="Views\SuperHotFeatureView.xaml" />
   </ItemGroup>
 
   <ItemGroup>
