added use of PermissionServerClient to BaseConsumingClient

--- a/src/ConsoleTestApp/ConsoleTestApp.csproj
+++ b/src/ConsoleTestApp/ConsoleTestApp.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Base.SDK\Base.SDK.csproj" />
     <ProjectReference Include="..\BootStrapper\BootStrapper.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\PermissionServer.Client\PermissionServer.Client.csproj" />
