--- a/src/SuperHotOtherFeatureServer.SDK/SuperHotOtherFeatureServer.SDK.csproj
+++ b/src/SuperHotOtherFeatureServer.SDK/SuperHotOtherFeatureServer.SDK.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Base.SDK\Base.SDK.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\PermissionServer.Client\PermissionServer.Client.csproj" />
   </ItemGroup>
