--- a/src/ClientApp/ClientApp.csproj
+++ b/src/ClientApp/ClientApp.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <None Remove="Views\LoginView.xaml" />
     <None Remove="Views\SuperHotFeatureView.xaml" />
+    <None Remove="Views\SuperHotOtherFeatureView.xaml" />
   </ItemGroup>
 
   <ItemGroup>
