working on userdetailsview and usercontrol

--- a/src/AdminApp/AdminApp.csproj
+++ b/src/AdminApp/AdminApp.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="UserControls\UserDetailsControl.xaml" />
     <None Remove="Views\LoginView.xaml" />
     <None Remove="Views\UserInfoView.xaml" />
     <None Remove="Views\ViewPermissionsView.xaml" />
