--- a/src/SuperHotFeatureServer.SDK/SuperHotFeatureServer.SDK.csproj
+++ b/src/SuperHotFeatureServer.SDK/SuperHotFeatureServer.SDK.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Base.SDK\Base.SDK.csproj" />
+    <ProjectReference Include="..\Base.SDK\Base.SDK.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\PermissionServer.Client\PermissionServer.Client.csproj" />
   </ItemGroup>
