--- a/src/AdminApp/AdminApp.csproj
+++ b/src/AdminApp/AdminApp.csproj
@@ -12,6 +12,9 @@
   <ItemGroup>
     <None Remove="UserControls\UserDetailsControl.xaml" />
     <None Remove="Views\AddLoginToUserWindow.xaml" />
+    <None Remove="Views\AddOwnedRoleToUserWindow.xaml" />
+    <None Remove="Views\AddRoleToUserWindow.xaml" />
+    <None Remove="Views\AddValueToUserWindow.xaml" />
     <None Remove="Views\LoginView.xaml" />
     <None Remove="Views\UserInfoView.xaml" />
     <None Remove="Views\ViewPermissionsView.xaml" />
@@ -29,9 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\WPF.Shared\WPF.Shared.csproj" />
     <ProjectReference Include="..\BootStrapper\BootStrapper.csproj" />
     <ProjectReference Include="..\PermissionServer.SDK\PermissionServer.SDK.csproj" />
+    <ProjectReference Include="..\WPF.Shared\WPF.Shared.csproj" />
   </ItemGroup>
 
 </Project>
