established messaging prototype UserControl -> ViewModel

--- a/src/WPF.Shared/WPF.Shared.csproj
+++ b/src/WPF.Shared/WPF.Shared.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BootStrapper\BootStrapper.csproj" />
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
   
