--- a/src/WPF.Shared/WPF.Shared.csproj
+++ b/src/WPF.Shared/WPF.Shared.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="UserControls\DelayingTextInputControl.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Expression.Blend.Sdk.WPF" Version="1.0.1" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.2.0" />
