--- a/src/WPF.Shared.NavigationPresenter/WPF.Shared.NavigationPresenter.csproj
+++ b/src/WPF.Shared.NavigationPresenter/WPF.Shared.NavigationPresenter.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="NET.efilnukefesin.Contracts.Mvvm" Version="1.3.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.1" />
+    <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.4.1" />
   </ItemGroup>
 
 </Project>
