--- a/src/WPF.Shared.NavigationPresenter/WPF.Shared.NavigationPresenter.csproj
+++ b/src/WPF.Shared.NavigationPresenter/WPF.Shared.NavigationPresenter.csproj
@@ -10,7 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NET.efilnukefesin.Contracts.Mvvm" Version="1.3.0" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Mvvm" Version="1.3.1-alpha" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.1" />
     <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.4.1" />
   </ItemGroup>
