--- a/src/AdminApp/AdminApp.csproj
+++ b/src/AdminApp/AdminApp.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="NET.efilnukefesin.Extensions.Wpf.Commands" Version="1.1.1" />
     <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.4.1" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm.WPF" Version="0.8.1-alpha" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
   </ItemGroup>
 
