set up tests for viewmodels

--- a/test/AdminAppTests/AdminAppTests.csproj
+++ b/test/AdminAppTests/AdminAppTests.csproj
@@ -8,15 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
     <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\AdminApp\AdminApp.csproj" />
     <ProjectReference Include="..\..\src\BootStrapper\BootStrapper.csproj" />
-    <ProjectReference Include="..\..\src\Services\Services.csproj" />
     <ProjectReference Include="..\Tests.Shared\Tests.Shared.csproj" />
   </ItemGroup>
 
