--- a/src/PermissionServer.Core/PermissionServer.Core.csproj
+++ b/src/PermissionServer.Core/PermissionServer.Core.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
-    <PackageReference Include="NET.efilnukefesin.Extensions" Version="1.6.1" />
+    <PackageReference Include="NET.efilnukefesin.Extensions" Version="1.7.0-beta" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.1" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.3.1" />
   </ItemGroup>
