--- a/src/BootStrapper/BootStrapper.csproj
+++ b/src/BootStrapper/BootStrapper.csproj
@@ -9,11 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
-    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.3.1" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.4.0-alpha" />
     <PackageReference Include="NET.efilnukefesin.Contracts.FeatureToggling" Version="1.0.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.EndpointRegister" Version="1.0.0" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.FileDataService" Version="1.3.3" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.InMemoryDataService" Version="0.9.1-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.FileDataService" Version="1.4.0-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.InMemoryDataService" Version="1.4.0-alpha" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.RestDataService" Version="1.3.2" />
     <PackageReference Include="NET.efilnukefesin.Implementations.DependencyInjection" Version="1.6.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.1" />
