--- a/src/ClientApp/ClientApp.csproj
+++ b/src/ClientApp/ClientApp.csproj
@@ -21,7 +21,7 @@
     <PackageReference Include="NET.efilnukefesin.Extensions.Wpf.Commands" Version="1.1.1" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.1" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm.WPF" Version="1.0.0" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm.WPF" Version="1.0.1-alpha" />
   </ItemGroup>
 
   <ItemGroup>
