--- a/src/Shared.Web/Shared.Web.csproj
+++ b/src/Shared.Web/Shared.Web.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.9.1" />
   </ItemGroup>
 
 </Project>
