added some Client Layers

--- a/src/Shared.Web/Shared.Web.csproj
+++ b/src/Shared.Web/Shared.Web.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.9.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.1" />
   </ItemGroup>
 
 </Project>
