--- a/src/PermissionServer.Client/PermissionServer.Client.csproj
+++ b/src/PermissionServer.Client/PermissionServer.Client.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\PermissionServer.Models\PermissionServer.Models.csproj" />
+    <ProjectReference Include="..\Shared.Web\Shared.Web.csproj" />
   </ItemGroup>
 
 </Project>
