--- a/src/Interfaces/Interfaces.csproj
+++ b/src/Interfaces/Interfaces.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.9.1" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.9.2-alpha" />
   </ItemGroup>
 
 </Project>
