--- a/src/SuperHotOtherFeatureServer.SDK/SuperHotOtherFeatureServer.SDK.csproj
+++ b/src/SuperHotOtherFeatureServer.SDK/SuperHotOtherFeatureServer.SDK.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.5.0-beta" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2-alpha" />
   </ItemGroup>
 
   <ItemGroup>
