--- a/test/CommonTests/CommonTests.csproj
+++ b/test/CommonTests/CommonTests.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0-beta4" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0-beta4" />
-    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.0.3" />
+    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.1.0-alpha" />
   </ItemGroup>
 
 </Project>
