--- a/test/WPF.SharedTests/WPF.SharedTests.csproj
+++ b/test/WPF.SharedTests/WPF.SharedTests.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0-beta4" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0-beta4" />
-    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.0.3" />
+    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.1.0-alpha" />
   </ItemGroup>
 
   <ItemGroup>
