updated dependencies to fit new preview version

--- a/src/Base.SDK/Base.SDK.csproj
+++ b/src/Base.SDK/Base.SDK.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.9.2-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.9.2" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
-    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.5.0-beta" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.5.0" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2" />
   </ItemGroup>
 
   <ItemGroup>
