--- a/src/AdminApp/AdminApp.csproj
+++ b/src/AdminApp/AdminApp.csproj
@@ -25,12 +25,12 @@
   <ItemGroup>
     <PackageReference Include="Expression.Blend.Sdk.WPF" Version="1.0.1" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
-    <PackageReference Include="NET.efilnukefesin.Extensions" Version="1.7.0-beta" />
+    <PackageReference Include="NET.efilnukefesin.Extensions" Version="1.7.0" />
     <PackageReference Include="NET.efilnukefesin.Extensions.Wpf.Commands" Version="1.1.1" />
-    <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.5.1-beta" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.9-alpha" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm.WPF" Version="1.1.1-alpha" />
-    <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
+    <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.5.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.9" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm.WPF" Version="1.1.1" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
