--- a/src/BootStrapper/BootStrapper.csproj
+++ b/src/BootStrapper/BootStrapper.csproj
@@ -9,18 +9,18 @@
 
   <ItemGroup>
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
-    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.5.0-beta" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.5.0" />
     <PackageReference Include="NET.efilnukefesin.Contracts.FeatureToggling" Version="1.0.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.EndpointRegister" Version="1.0.0" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.FileDataService" Version="1.5.1-alpha" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.InMemoryDataService" Version="1.5.1-alpha" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.RestDataService" Version="1.5.4-alpha" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.DependencyInjection" Version="1.6.3-alpha" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.FileDataService" Version="1.5.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.InMemoryDataService" Version="1.5.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Services.DataService.RestDataService" Version="1.5.4" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.DependencyInjection" Version="1.6.3" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Logger.SerilogLogger" Version="1.2.0" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.9-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.9" />
     <PackageReference Include="NET.efilnukefesin.Implementations.FeatureToggling" Version="1.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview7.19362.4" /> 
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview9.19423.4" /> 
   </ItemGroup>
 
   <ItemGroup>
