--- a/src/PermissionServer.Client/PermissionServer.Client.csproj
+++ b/src/PermissionServer.Client/PermissionServer.Client.csproj
@@ -8,12 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityModel" Version="3.10.10" />
-    <PackageReference Include="Microsoft.Extensions.Primitives" Version="3.0.0-preview7.19362.4" />
-    <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.9.2-alpha" />
+    <PackageReference Include="IdentityModel" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="3.0.0-preview9.19423.4" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.9.2" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
-    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.5.0-beta" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.5.0" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2" />
   </ItemGroup>
 
   <ItemGroup>
