--- a/src/PermissionServer.Models/PermissionServer.Models.csproj
+++ b/src/PermissionServer.Models/PermissionServer.Models.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2-alpha" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0-preview7.19362.9" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0-preview9.19421.4" />
   </ItemGroup>
 
 </Project>
