--- a/src/PermissionServer.Server/PermissionServer.Server.csproj
+++ b/src/PermissionServer.Server/PermissionServer.Server.csproj
@@ -6,8 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2-alpha" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Rest.Server" Version="0.3.2-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Rest.Server" Version="0.3.2" />
   </ItemGroup>
 
   <ItemGroup>
