--- a/src/WPF.Shared/WPF.Shared.csproj
+++ b/src/WPF.Shared/WPF.Shared.csproj
@@ -16,9 +16,9 @@
   <ItemGroup>
     <PackageReference Include="Expression.Blend.Sdk.WPF" Version="1.0.1" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.9-alpha" />
-    <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
-    <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.5.1-beta" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.9" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.1.3" />
+    <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.5.1" />
   </ItemGroup>
 
   <ItemGroup>
