--- a/test/ServicesTests/ServicesTests.csproj
+++ b/test/ServicesTests/ServicesTests.csproj
@@ -8,10 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="Moq" Version="4.12.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.0.0-beta4" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.0.0-beta4" />
-    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.1.0-alpha" />
+    <PackageReference Include="Moq" Version="4.13.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
+    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
