--- a/test/Tests.Shared/Tests.Shared.csproj
+++ b/test/Tests.Shared/Tests.Shared.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NET.efilnukefesin.Contracts.Mvvm" Version="1.3.3-alpha" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Mvvm" Version="1.3.3" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2" />
   </ItemGroup>
 
 </Project>
